--- a/Midterm/p5js.org
+++ b/Midterm/p5js.org
@@ -13,3 +13,5 @@ Chat gpt gave me a modifyed verison of the code.
 I uploaded my 3 sounds and copied the code given from chat gpt in to the coding sight 
 it worked 
 <iframe src="https://editor.p5js.org/TirilJackson/full/1-hG5Wu0T7"></iframe>
+/Users/tiriljackson/Desktop/Screenshot 2025-03-25 at 6.09.32 AM.png
+/Users/tiriljackson/Desktop/Screenshot 2025-03-25 at 6.09.39 AM.png
